[package]
name = "TIGRE"
version = "0.1.0"
description = "A Tool Integrated GIS with a REPL Environment"
authors = ["Tristan Damron"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tigre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.13.2", features = ["v4"] }

# Required
postgres-types = { version = "*", features = ["derive"] }

# Extra types
time = "*"
eui48 = "*"
rust_decimal = { version = "*", features = ["db-postgres"] }
cornucopia_sync = "0.4.0"
postgres = { version = "0.17.3", features = ["with-serde_json-1"] }
gdal = { version = "0.17.1", features = ["bindgen"] }
gdal-sys = "0.10.0"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.34.0", features = ["load_extension", "bundled"] }
geozero = { version = "0.14.0", features = ["with-wkb", "with-svg"] }
hex = "0.4.3"
actix-web = "4.10.2"
resvg = "0.45.0"
